<resources>
    <string name="app_name">Catchwo</string>
    <string name="welcome_to_catchwo">WelCome To Catchwo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="chat">Chat Room</string>
    <string name="reels">Clips</string>
    <string name="clubs">Clubs</string>
    <string name="community">Committee</string>
    <string name="survey">Survey Form</string>
    <string name="profession">Profession</string>
    <string name="memories">Memories</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="books">Books</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="friends">Friends</string>
    <string name="logout">Logout</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="report_problems">Report Problems</string>
    <string name="information_center">Information Center</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="email_catchwo_com">Email@catchwo.com</string>
    <string name="about_post">About Post</string>
    <string name="share">Share</string>
    <string name="go_live">Go Live</string>
    <string name="add_post">Post</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="people">People</string>
</resources>