<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:title="@string/menu_home"
        app:cnb_backgroundColor="@color/pink"
        app:cnb_iconColor="@color/app"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/app"/>
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_chat"
        app:showAsAction="always"
        android:title="@string/chat"
        app:cnb_backgroundColor="@color/blue_tx"
        app:cnb_iconColor="@color/blue"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/blue"/>
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/reel"
        app:showAsAction="always"
        android:title="@string/reels"
        app:cnb_backgroundColor="@color/reel_tx"
        app:cnb_iconColor="@color/reel"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/reel" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_people"
        app:showAsAction="always"
        android:title="@string/people" />
    <item
        android:id="@+id/notification"
        app:showAsAction="always"
        android:icon="@drawable/name"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/notification"
        app:cnb_iconColor="@color/notification_tx"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/notification_tx"  />
    </group>
</menu>