<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".ui.home.HomeFragment">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />


    <!--    <androidx.core.widget.NestedScrollView-->
    <!--        android:id="@+id/scrollView7"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="4dp"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:layout_marginEnd="4dp"-->
    <!--        android:fitsSystemWindows="true"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loading">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:drawableEnd="@drawable/ic_search"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="Search" />


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/post"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/addpost" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/notosansregular"
                        android:text="@string/add_post"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/live" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/notosansregular"
                        android:text="@string/go_live"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/location" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/notosansregular"
                        android:text="@string/share"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/post_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="true"
            app:stackFromEnd="true" />


        <Button
            android:id="@+id/more"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bound"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/tienne"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="Load More"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:visibility="visible"
            tools:ignore="ContentDescription,HardcodedText" />


        <TextView
            android:id="@+id/nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:alpha="0.5"
            android:fontFamily="@font/tienne"
            android:gravity="center"
            android:text="Nothing Found"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:visibility="gone"
            tools:ignore="ContentDescription,HardcodedText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"/>

    </LinearLayout>

    <!--    </androidx.core.widget.NestedScrollView>-->
</androidx.constraintlayout.widget.ConstraintLayout>